# resilio-sync-watch-config

./: .dockerignore  .eslintrc.json  .gitignore  .npmignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config-file-handler.js  index.js  merge-multiple-configs.js  merge-multiple-configs.test.js  package-lock.json  package.json  parse-config.js  parse-config.test.js  parseConfig.js  parseConfig.test.js  resilio-lifecycle.js  resilio-sync.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: container.yml  rust.yml
source/: config-file-handler.js  config-file-handler.ts  index.js  index.ts  merge-multiple-configs.js  merge-multiple-configs.ts  parse-config-parts.js  parse-config-parts.ts  parse-config.ts  resilio-lifecycle.js  resilio-lifecycle.ts  resilio-sync-process.ts  resilio-sync.js  runmodes.js  runmodes.ts  types.ts
source/config/: index.ts  merge-multiple-configs.ts  parse-config-parts.ts  parse-config.ts  types.ts
source/filesystem/: own-config.ts  path.ts  resilio-config.ts  temp-config-file.ts  watch.ts
spec/: parseConfigSpec.js
src/: cli.rs  config-file-handler.js  debounce.js  debounce.test.js  index.js  main.rs  parse-config-parts.js  parse-config-parts.test.js  parse-config.test.js  parse.rs  polyfill-fs-promise.js  resilio-lifecycle.js  resilio-sync.js  resilio.rs  runmodes.generate-config.test.js  runmodes.js  share.rs
systemd/: README.md  install.sh  resilio-sync-watch-config.service.example
test/: merge-multiple-configs.js  merge-multiple-configs.ts  parse-config-parts.js  parse-config.js  parse-config.ts  runmodes.generate-config.js  runmodes.generate-config.ts
(+22 files in other folders)
