[package]
name = "resilio-sync-watch-config"
description = "Small tool to create a resilio config and watch for changes to restart the sync daemon on changes"
version = "3.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/resilio-sync-watch-config"
authors = ["EdJoPaTo <resilio-sync-watch-config-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "3", features = ["cargo"] }
clap_complete = "3"

[dependencies]
clap = { version = "3", features = ["cargo", "wrap_help"] }
exitcode = "1"
hostname = "0.3"
lazy_static = "1"
nix = "0.23"
notify = "4"
serde_json = "1"
signal-hook = "0.3"
tempfile = "3"

[dependencies.serde]
version = "1"
features = ["derive"]
